# qc-test

./: README.md  genindex.html  index.html  main.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: blank.yml  docs.yml  pypi.yml  qc.yml
_sources/: modules.rst.txt
docs/: conf.py
qc_test/: main.py
tests/: __init__.py  demo_test.py
