[tool.poetry]
name = "qc-test"
version = "0.1.0"
description = "Test QC."
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
readme = "README.md"
packages = [{include = "qc_test"}]

[tool.poetry.dependencies]
python = "^3.9"
tox = "^3.27.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
